--- a/booknow.html
+++ b/booknow.html
@@ -59,7 +59,10 @@
        <a href='booknow.html'> BOOK AN APPOINTMENT </a>
        <a href='callnow.html'> CALL NOW </a>
      </div>
-<div class='content'> BOOK AN APPOINTMENT </div>
-   
+<div class='content'> <h2><b>BOOK AN APPOINTMENT</b></h2></div>
+    <span>Get started with booking your first counseling session for free. Chat with our team of counselors and discuss your issues with 
+    them. Your first two counseling sessions are free of cost by our side and further sessions would also charge much cheaper fees than
+     other therapists and counselors. Fill out the form given below to book your first chat slot with our team. We will contact you shortly within 
+    a few hours of registration.</span>
 </body>
 </html>
