--- a/callnow.html
+++ b/callnow.html
@@ -59,7 +59,11 @@
        <a href='booknow.html'> BOOK AN APPOINTMENT </a>
        <a href='callnow.html'> CALL NOW </a>
      </div>
-<div class='content'> CALL NOW </div>
-   
+<div class='content'><b><h2> CALL NOW </h2></b></div>
+<span>Conntact us at the number given below in case of emergency. We will try to reach out as soon as possible to you and help you out.
+Feel free to talk with our team members about your issues so that we can help you better. Our interaction with you will be confidential 
+due to privacy concerns. Even our teammates would not know about your real identity. This setup has been created to help you feel more 
+comfortable so that you can open up more effectively with our couselors.</span>   
+    <p>phone no.- +91 123456789 </p>
 </body>
 </html>
