--- a/contactus.html
+++ b/contactus.html
@@ -59,7 +59,11 @@
        <a href='booknow.html'> BOOK AN APPOINTMENT </a>
        <a href='callnow.html'> CALL NOW </a>
      </div>
-<div class='content'> CONTACT US</div>
+<div class='content'> <h2><b>CONTACT US</b></h2></div>
+    <span> Kindly share your precious feedback with us on our email id such that we can improve our site and services.
+     Your positive feedback will help our team work more efficiently 
+    and feel more motivated. We would try our best to improve in case for complaints.
+    email id = <a href='email'>Here4UTeam@gmail.com</a></span>
    
 </body>
 </html>
