--- a/Hear4U.html
+++ b/Hear4U.html
@@ -10,7 +10,7 @@
             font-family: Arial, sans-serif;
         }
         .navbar {
-            background-color: grey; /* Change the background color to grey */
+            background-color:  #b0dae3; /* Change the background color to grey */
             overflow: hidden;
         }
         .navbar a {
@@ -49,6 +49,7 @@
         although we are here <b><i>"All ears for you"</b></i> in case you need any further counselling or help.  </h3></div>
         <div class = 'navbar'>
        <a href='home.html'> HOME </a>
+       <a href='explore mental health.html'> EXPLORE MENTAL HEALTH </a>
        <a href='contactus.html'> CONTACT US </a>
        <a href='aboutus.html'> ABOUT US </a>
        <a href='booknow.html'> BOOK AN APPOINTMENT </a>
