--- a/callnow.html
+++ b/callnow.html
@@ -10,7 +10,7 @@
             font-family: Arial, sans-serif;
         }
         .navbar {
-            background-color: #808000; /* Change the background color to grey */
+            background-color:  #b0dae3; /* Change the background color to grey */
             overflow: hidden;
         }
         .navbar a {
@@ -54,10 +54,12 @@
    HEAR4U</div>
   <div class = 'navbar'>
        <a href='home.html'> HOME </a>
+       <a href='explore mental health.html'> EXPLORE MENTAL HEALTH </a>
        <a href='contactus.html'> CONTACT US </a>
        <a href='aboutus.html'> ABOUT US </a>
        <a href='booknow.html'> BOOK AN APPOINTMENT </a>
        <a href='callnow.html'> CALL NOW </a>
+
      </div>
 <div class='content'><b><h2> CALL NOW </h2></b></div>
 <span>Conntact us at the number given below in case of emergency. We will try to reach out as soon as possible to you and help you out.
