--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
             font-family: Arial, sans-serif;
         }
         .navbar {
-            background-color: #808000; /* Change the background color to grey */
+            background-color:  #b0dae3 ; /* Change the background color to grey */
             overflow: hidden;
         }
         .navbar a {
@@ -38,6 +38,15 @@
             -webkit-text-fill-color: transparent;
             text-fill-color: transparent;
         }
+        .header a {
+            overflow: auto;
+        }
+        .header b {
+            overflow: auto;
+            display: flex;
+            justify-content: center;
+            align-items: flex-end;
+        }
  @keyframes float-in {
             from {
                 opacity: 0;
@@ -53,13 +62,18 @@
 <div class="header">
    HEAR4U</div>
         <div class = 'navbar'>
+          
        <a href='home.html'> HOME </a>
+       <a href='explore mental health.html'> EXPLORE MENTAL HEALTH </a>
        <a href='contactus.html'> CONTACT US </a>
        <a href='aboutus.html'> ABOUT US </a>
        <a href='booknow.html'> BOOK AN APPOINTMENT </a>
        <a href='callnow.html'> CALL NOW </a>
+      
      </div>
-
+     <div class="header b">
+     <video src="C:\Users\Sudhanshu\Downloads\you are worthy of happiness and piece of mind.mp4"></video>
+        </div>
         <div class='content'><h3> We are here to keep your mental health in check. Go through our blogs and video links to get to know yourself and your mental conditions better.
         although we are here <b><i>"All ears for you"</b></i> in case you need any further counselling or help.  </h3></div>
           <p> Go ahead and explore various ways to elevate your information about mental health.
