--- a/aboutus.html
+++ b/aboutus.html
@@ -10,7 +10,7 @@
             font-family: Arial, sans-serif;
         }
         .navbar {
-            background-color: #808000; /* Change the background color to grey */
+            background-color:  #b0dae3; /* Change the background color to grey */
             overflow: hidden;
         }
         .navbar a {
@@ -55,10 +55,12 @@
 
         <div class = 'navbar'>
        <a href='home.html'> HOME </a>
+   <a href='explore mental health.html'> EXPLORE MENTAL HEALTH </a>
        <a href='contactus.html'> CONTACT US </a>
        <a href='aboutus.html'> ABOUT US </a>
        <a href='booknow.html'> BOOK AN APPOINTMENT </a>
        <a href='callnow.html'> CALL NOW </a>
+     
      </div>
          <div class='content'>
         <h1> ABOUT US </h1>
