--- a/Hear4U.html
+++ b/Hear4U.html
@@ -32,7 +32,7 @@
             font-size: 24px;
             font-weight: bold;
         }
- @keyframes float-in {
+ @keyframes float-in 
             from {
                 opacity: 0;
                 transform: translateY(-20px);
