--- a/contactus.html
+++ b/contactus.html
@@ -38,7 +38,7 @@
             -webkit-text-fill-color: transparent;
           
         }
- @keyframes float-in {
+ @keyframes float-in 
             from {
                 opacity: 0;
                 transform: translateY(-20px);
