--- a/home.html
+++ b/home.html
@@ -49,7 +49,7 @@
     box-sizing: border-box;
     
 }
- @keyframes float-in {
+ @keyframes float-in 
             from {
                 opacity: 0;
                 transform: translateY(-20px);
