adding psychometric test to the exploring page

--- a/explore mental health.html
+++ b/explore mental health.html
@@ -110,7 +110,7 @@
 <li><a href="depresion test.html"> Take a depresion test</a></li>
 <li> <a href="anxiety test.html">Anxiety test</a></li>
 <li> <a href="PTSD test.html">Post-Traumatic Stress Disorder (PTSD) test </a> </li>
-<li> <a href="psychometric test"> </a>   </li>
+<li> <a href="psychometric test.html"> psychometric test</a>   </li>
 </div>
 
 </body>
