adding schizophrenia test

--- a/explore mental health.html
+++ b/explore mental health.html
@@ -111,6 +111,10 @@
 <li> <a href="anxiety test.html">Anxiety test</a></li>
 <li> <a href="PTSD test.html">Post-Traumatic Stress Disorder (PTSD) test </a> </li>
 <li> <a href="psychometric test.html"> psychometric test</a>   </li>
+<li> <a href="Schizophrenia test.html"></a></li>
+
+
+
 </div>
 
 </body>
