adding biopolar test

--- a/explore mental health.html
+++ b/explore mental health.html
@@ -112,7 +112,7 @@
 <li> <a href="PTSD test.html">Post-Traumatic Stress Disorder (PTSD) test </a> </li>
 <li> <a href="psychometric test.html"> psychometric test</a>   </li>
 <li> <a href="Schizophrenia test.html">Schizophrenia test</a></li>
-
+<li> <a href="biopolar test.html"> biopolar test</a>   </li>
 
 
 </div>
