adding ADHD test

--- a/explore mental health.html
+++ b/explore mental health.html
@@ -113,7 +113,8 @@
 <li> <a href="psychometric test.html"> psychometric test</a>   </li>
 <li> <a href="Schizophrenia test.html">Schizophrenia test</a></li>
 <li> <a href="biopolar test.html"> biopolar test</a>   </li>
-
+<li> <a href="ADHD test.html"> Attention-Deficit Hyperactivity Disorder (ADHD) test </a></li>
+ 
 
 </div>
 
