modyfying the contact us page

--- a/home.html
+++ b/home.html
@@ -57,9 +57,24 @@
                 opacity: 1;
                 transform: translateY(0);
             }
+            .header {
+            text-align: center;
+            padding: 20px;
+            font-size: 48px;
+            font-weight: bold;
+            color: transparent;
+            background: url('D:\headerimage.jpg') no-repeat center;
+            background-size: cover;
+            -webkit-background-clip: text;
+            background-clip: text;
+            -webkit-text-fill-color: transparent;
+            text-fill-color: transparent;
+        }
     </style>
 </head>
 <body>
+    <div class="header">
+        HEAR4U</div>
 
         <div class = 'navbar'>   
        <a href='home.html'> HOME </a>
@@ -68,6 +83,7 @@
        <a href='aboutus.html'> ABOUT US </a>
        <a href='booknow.html'> BOOK AN APPOINTMENT </a>
        <a href='callnow.html'> CALL NOW </a>
+       <a href="login page.html">Login / sign in</a>
 
      <div class="hero-section">
         <video autoplay loop muted src="C:\Users\Sudhanshu\Downloads\you are worthy of happiness and piece of mind.mp4"></video>
