--- a/home.html
+++ b/home.html
@@ -90,7 +90,7 @@
         </div>
      
         </div>
-        <div class='content'><h3> WELCOME TO THE SITE <br>
+        <div class='content'><h3><u> WELCOME TO THE SITE </u><br>
             Hey there! we are here to hear you.<br>
             Mental health is about how we think, feel, and live our daily lives. It includes our emotions, how we handle stress, and how we interact with others. Good mental health doesn’t just mean not having problems—it’s about feeling balanced, happy, and able to face life’s challenges.
 
