--- a/explore mental health.html
+++ b/explore mental health.html
@@ -7,6 +7,61 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 20px;
+            background-color: #f8f9fa;
+        }
+        .container {
+            max-width: 1200px;
+            margin: auto;
+        }
+        h2 {
+            text-align: center;
+            font-size: 2em;
+            margin-bottom: 20px;
+        }
+        .blog-container {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            justify-content: center;
+        }
+        .blog-post {
+            background: #fff;
+            padding: 15px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            width: 300px;
+            text-align: center;
+        }
+        .blog-post img {
+            width: 100%;
+            height: 180px;
+            border-radius: 5px;
+            object-fit: cover;
+        }
+        .blog-post h3 {
+            margin-top: 10px;
+            font-size: 1.2em;
+        }
+        .blog-post p {
+            color: #555;
+            font-size: 0.9em;
+        }
+        .read-more {
+            display: inline-block;
+            margin-top: 10px;
+            padding: 8px 12px;
+            background: #007bff;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+        .read-more:hover {
+            background: #0056b3;
+        }
+        body {
+            font-family: Arial, sans-serif;
         }
         .navbar {
             background-color:  #b0dae3 ; /* Change the background color to grey */
@@ -119,6 +174,43 @@
  
 
 </div>
+<div class="container">
+    <h2>Latest Blog Posts</h2>
+    <div class="blog-container" id="blog-container"></div>
+</div>
 
+<script>
+    const blogPosts = [
+        {
+            title: "why mental health is important?",
+            image: "https://source.unsplash.com/300x180/?marketing",
+            excerpt: "Discover the best tips and strategies to enhance your digital marketing expertise.",
+        },
+        {
+            title: "how to deal with stress?",
+            image: "https://source.unsplash.com/300x180/?technology",
+            excerpt: "Explore how artificial intelligence is revolutionizing content creation.",
+        },
+        {
+            title: "why it is important to take care of your self?",
+            image: "https://source.unsplash.com/300x180/?seo",
+            excerpt: "Learn about the latest SEO techniques to improve your website's visibility.",
+        }
+    ];
+
+    const blogContainer = document.getElementById("blog-container");
+
+    blogPosts.forEach(post => {
+        const blogElement = document.createElement("div");
+        blogElement.classList.add("blog-post");
+        blogElement.innerHTML = `
+            <img src="${post.image}" alt="${post.title}">
+            <h3>${post.title}</h3>
+            <p>${post.excerpt}</p>
+            <a href="#" class="read-more">Read More</a>
+        `;
+        blogContainer.appendChild(blogElement);
+    });
+</script>
 </body>
 </html>
