--- a/explore mental health.html
+++ b/explore mental health.html
@@ -5,6 +5,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic Navigation Bar</title>
     <style>
+         body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            padding: 20px;
+            background-color: #f5f5f5;
+        }
+        .container {
+            max-width: 800px;
+            margin: auto;
+            background: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            text-align: center;
+        }
+        .blog-post {
+            border-bottom: 1px solid #ddd;
+            padding: 15px 0;
+        }
+        .blog-post:last-child {
+            border-bottom: none;
+        }
+        .blog-post h2 {
+            margin: 0 0 10px;
+        }
+        .blog-post p {
+            margin: 5px 0;
+        }
+        .blog-form {
+            margin-top: 20px;
+        }
+        .blog-form input, .blog-form textarea {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+        }
+        .blog-form button {
+            background-color: #007bff;
+            color: white;
+            padding: 10px 15px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
         body {
             font-family: Arial, sans-serif;
         }
@@ -116,14 +164,10 @@
 <li> <a href="biopolar test.html"> Biopolar Test</a>   </li>
 <li> <a href="ADHD test.html"> Attention-Deficit Hyperactivity Disorder (ADHD) Test </a></li>
 <li><a href="mood disorder.html">Mood disorder Test</a>  </li>
+
+</div>
+
  
-
-</div>
-<div class="container">
-    <h2>Latest Blog Posts</h2>
-    <div class="blog-container" id="blog-container"></div>
-</div>
-
 
 
 
